# BEND

./: EARLY_STOPPING_GUIDE.md  Makefile  README.md  SETUP_SUMMARY.md  pyproject.toml  run_embedding.sh  setup.py  setup_dev.sh
bend/io/: __init__.py  sequtils.py
bend/models/: __init__.py  awd_lstm.py  basset.py  dilated_cnn.py  dnabert2.py  dnabert2_padding.py  downstream.py  flash_attn_triton.py  gena_lm.py  hyena_dna.py
bend/utils/: __init__.py  data_downstream.py  ddp_task_trainer.py  download.py  embedders.py  retrieve_from_bed.py  seed_utils.py  sequences.py  task_trainer.py
conf/datadims/: embedding_dims.yaml
conf/datadims/dimensions/: datadims.yaml
conf/embedding/: embed.yaml
conf/hydra/: multirun.yaml
conf/supervised_tasks/: chromatin_accessibility.yaml  cpg_methylation.yaml  enhancer_annotation.yaml  gene_finding.yaml  histone_modification.yaml
docs/source/: conf.py
examples/: unsupervised_variant_effects.ipynb
examples/Basset/: notebook.ipynb
scripts/: download_bend.py  download_bend_gsutil.sh  list_metrics.py  precompute_embeddings.py  predict_variant_effects.py  train_on_task.py
tests/: test_ddp.py  test_early_stopping.py  test_gpu_selection.py  test_random_seed.py
